<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.rizkirahman.smartcarcontrol.Door">

    <TextView
        android:id="@+id/doorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/door"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/frontLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="38dp"
        app:layout_constraintHorizontal_bias="0.701"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/doorTitle"
        app:layout_constraintTop_toBottomOf="@+id/doorTitle" />

    <Switch
        android:id="@+id/frontRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="38dp"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintLeft_toLeftOf="@+id/doorTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorTitle" />

    <Switch
        android:id="@+id/rearLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="13dp"
        app:layout_constraintLeft_toLeftOf="@+id/frontLeft"
        app:layout_constraintTop_toBottomOf="@+id/frontLeft"
        android:layout_marginLeft="0dp" />

    <Switch
        android:id="@+id/rearRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="13dp"
        app:layout_constraintRight_toRightOf="@+id/frontRight"
        app:layout_constraintTop_toBottomOf="@+id/frontRight"
        android:layout_marginRight="0dp" />

    <Switch
        android:id="@+id/boot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="117dp"
        app:layout_constraintTop_toBottomOf="@+id/doorTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/frontLeftText"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/frontLeft"
        android:textAlignment="textEnd"
        app:layout_constraintBaseline_toBaselineOf="@+id/frontLeft"
        app:layout_constraintRight_toLeftOf="@+id/frontLeft"
        android:layout_marginRight="4dp" />

    <TextView
        android:id="@+id/frontRightText"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/frontRight"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/frontRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/frontRight"
        app:layout_constraintRight_toRightOf="@+id/frontLeftText" />

    <TextView
        android:id="@+id/rearLeftText"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rearLeft"
        android:textAlignment="textEnd"
        app:layout_constraintLeft_toLeftOf="@+id/frontLeftText"
        app:layout_constraintRight_toLeftOf="@+id/rearLeft"
        app:layout_constraintBaseline_toBaselineOf="@+id/rearLeft"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/rearRightText"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:text="@string/rearRight"
        android:textAlignment="viewStart"
        app:layout_constraintBaseline_toBaselineOf="@+id/rearRight"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/rearRight"
        app:layout_constraintRight_toRightOf="@+id/frontLeftText" />

    <TextView
        android:id="@+id/bootText"
        android:layout_width="106dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/boot"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boot" />

    <Button
        android:id="@+id/lockAll"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="216dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="46dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/lockAll"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bootText" />

    <Button
        android:id="@+id/backToMenu"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
